# dotfiles

./: .gitignore  .latexmkrc  .pryrc  .tmux.conf  .vimrc  .zprofile  .zshenv  .zshrc  README.md  cheatsheet  ctags  dein.toml  dist-workspace.toml  init.sh  latexmkrc  lazy_dein.toml  makefile  makelinks.sh  setup.sh  vimrc  wezterm.lua  zshenv  zshexp  zshrc
autoload/: twitter.vim
fish/: config.fish  fish_variables  install_deps.sh
fish/conf.d/: alias.fish  exports.fish  go.fish  js.fish  prompt.fish  python.fish  ruby.fish  rust.fish  term.fish  tex.fish
fish/interactive/: prompt.fish
fish/paths/: bun.fish  deno.fish  go.fish  js.fish  node.fish  python.fish  ruby.fish  rust.fish  tex.fish
ftdetect/: tex.vim  vim.vim  yaml.vim
ftplugin/: haskell.vim
home/: .latexmkrc  .pryrc  .tmux.conf  .zprofile  .zshalias  .zshenv  .zshexp  .zshrc
images/: ryujinou  ryuou
indent/: make.vim  tex.vim
keymaps/: main.vim  normal.vim
misc/: .alacritty.toml  .latexmkrc  .pryrc  .wezterm.lua
nvim/: coc-settings.json  dein.toml  filetype.vim  init.lua  init.vim  lazy-lock.json  lazy_dein.toml  nvim
nvim/ftdetect/: caddy.lua  coffee.vim  dict.vim  dockerfile.vim  markdown.vim  nginx.vim  perl.vim  tex.lua  tex.vim  toml.vim  typescript.vim
nvim/ftplugin/: dict.vim  haskell.vim  ocaml.vim  rust.lua  tex.vim
nvim/indent/: dict.vim  make.vim
nvim/keymaps/: normal.vim
nvim/lua/: lsp-configs.lua  lsp-setup.lua  lsp.lua  plugins.lua
nvim/snippets/: java.snip  markdown.snip  plaintex.snip  tex.snip
nvim/syntax/: tex.vim  toml.vim
nvim/ultisnips/: latex.snippets  toml.snippets  typescript.snippets
shell/: env  install_deps.sh  profile.sh
shell/env/: env.config  env.template
shell/fish/: config.fish
snippets/: markdown.snip  plaintex.snip  tex.snip
syntax/: dict.vim  tex.vim  twitter_follow.vim  twitter_timeline.vim  twitter_tweet.vim  twitter_user.vim  twitter_user_timeline.vim
template/bib/: base-main.bib
template/tex/: base-main-lualatex.tex
test/: Dockerfile  test.sh
tools/: Cargo.toml
tools/.cargo/: config.toml
tools/src/: cli_install.rs  lib.rs  links.rs  main.rs  profile.rs
tools/src/definitions/: bun.rs  deno.rs  fish.rs  fnm.rs  golang.rs  jaq.rs  mod.rs  neovim.rs  neovim_deps.rs  rust.rs  starship.rs  uv.rs  zig.rs
(+31 files in other folders)
